tests/snapshots/run_core__empty.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/empty.hvm
---
[4m[1m[31mErrors:[0m
File has no 'main' definition.
