tests/snapshots/run_core__erased_side_effect.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/erased_side_effect.hvm
---
123
