tests/snapshots/run_core__exp.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/exp.hvm
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Reached Root.

λa λb (<Invalid> λ$c $c $c)
