tests/snapshots/run_core__extracted_match_pred.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/extracted_match_pred.hvm
---
valZ
