tests/snapshots/run_core__field_vectorization.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/field_vectorization.hvm
---
T
