tests/snapshots/run_core__id_underscore.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/id_underscore.hvm
---
{2 3}
