tests/snapshots/run_core__kind_compiled_tree_sum.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/kind_compiled_tree_sum.hvm
---
16678913
