tests/snapshots/run_core__lam_op2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/lam_op2.hvm
---
λa (+ a 2)
