tests/snapshots/run_core__lam_op2_nested.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/lam_op2_nested.hvm
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Invalid Numeric Operation. (2 occurrences)

λa (* a (+ a <Invalid>))
