tests/snapshots/run_core__let_tup_readback.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/let_tup_readback.hvm
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Reached Root.

λa ($b (a λc (<Invalid> λ$b c)))
