tests/snapshots/run_core__linearize_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/linearize_match.hvm
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Invalid Numeric Match.

λa switch a = a { 0: λb b; _: λa λb (+ a b); }
